--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,11 +5,9 @@
 }
 
 body {
-  font: Arial, Helvetica, sans-serif;
-  background-color: darkcyan;
-  color: white;
-
-  h1 {
-    font-size: 80px;
-  }
+  font: 16px "Helvetica Neue", Arial, sans-serif;
+  color: #121214;
+  // h1 {
+  //   font-size: 80px;
+  // }
 }
